<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_levelbox">

    <TextView
        android:id="@+id/dialog_permission_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="casual"
        android:text="@string/dialog_permission_title"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_permission_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="casual"
        android:text="@string/dialog_permission_message"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_permission_title" />

    <ImageView
        android:id="@+id/dialog_permission_line"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/dialog_permission_message"
        app:layout_constraintDimensionRatio="w,10:2"
        app:layout_constraintEnd_toEndOf="@+id/dialog_permission_title"
        app:layout_constraintStart_toStartOf="@+id/dialog_permission_title"
        app:layout_constraintTop_toBottomOf="@+id/dialog_permission_title"
        app:layout_constraintVertical_bias="0.90999997"
        app:srcCompat="@drawable/ic_line" />

    <TextView
        android:id="@+id/dialog_permission_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/dialog_permission_hint"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/dialog_permission_cancel"
        app:layout_constraintEnd_toEndOf="@+id/dialog_permission_message"
        app:layout_constraintStart_toStartOf="@+id/dialog_permission_message"
        app:layout_constraintTop_toBottomOf="@+id/dialog_permission_message" />

    <Button
        android:id="@+id/dialog_permission_cancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="@+id/dialog_permission_hint"
        app:layout_constraintStart_toStartOf="@+id/dialog_permission_hint"
        app:layout_constraintTop_toBottomOf="@+id/dialog_permission_hint" />
</androidx.constraintlayout.widget.ConstraintLayout>